update proc KeToan -3/5

--- a/Test02/Views/KeToan/CongnoDL.cshtml
+++ b/Test02/Views/KeToan/CongnoDL.cshtml
@@ -11,120 +11,98 @@
 
 }
 <link href="~/Content/KeToan/StyleKeToan.css" rel="stylesheet" />
-
+@{
+    var madly = Session["Madly"];
+    var loaidl = db.LoaiDLs.Where(s => s.MaLoaiDL == madly).FirstOrDefault();
+    var daily = db.DaiLies.Where(s => s.MaDL == madly).FirstOrDefault();
+    var tongno = "";
+    if (ViewBag.TongCN != null)
+    {
+        tongno = string.Format("{0:0,0 vnđ}", ViewBag.TongCN);
+    }
+    else
+    {
+        tongno = "0 vnđ";
+    }
+}
 <div class="col-md-12">
     <div class="tile" id="printme">
-        <h4 class="title-ketoan">THÔNG TIN ĐẠI LÝ</h4>
+        @*<h4 class="title-ketoan">THÔNG TIN ĐẠI LÝ</h4>*@
         <div class="tile-body">
-            @{
-                var madly = Session["Madly"];
-                var loaidl = db.LoaiDLs.Where(s => s.MaLoaiDL == madly).FirstOrDefault();
-                var daily = db.DaiLies.Where(s => s.MaDL == madly).FirstOrDefault();
-
-                var tongno = string.Format("{0:0,0 vnđ}", ViewBag.TongCN);
-            }
             <div class="detail-daily">
-                <p style="text-align:center">
+                <h5><b>THÔNG TIN ĐẠI LÝ</b></h5>
+                <p>
                     <strong>Mã đại lý: </strong>@Html.DisplayFor(modelItem => Session["Madly"])- @Html.DisplayFor(modelItem => daily.MaLoaiDL)
                 </p>
                 <p>
                     <strong>Tên đại lý: </strong>@Html.DisplayFor(modelItem => daily.TenDL)
                 </p>
-               
-                <div class="thongtin-daily">
-                    <p>
-                        <strong>Địa chỉ </strong>@Html.DisplayFor(modelItem => daily.DiaChi)
-                    </p>
-                    <p>
+                <p>
+                        <strong>Địa chỉ: </strong>@Html.DisplayFor(modelItem => daily.DiaChi)
+                </p>
+                <p>
                         <strong>Liên lac: </strong>@Html.DisplayFor(modelItem => daily.SDT) - @Html.DisplayFor(modelItem => daily.Email)
-                    </p>
-
-                </div>
-
-
-
-            </div>
+                </p>
+             </div>
+        </div>
+        <div class="thongtindonhang">
+            <h5><b>THÔNG TIN ĐƠN HÀNG</b></h5>
             <div class="col-sm-6" id="dropdownsort">
                 @using (Html.BeginForm("CongnoDL", "KeToan", FormMethod.Post, new { @class = "form-group-sm" }))
                 {
-
-                    @Html.DropDownList("thangs", (IEnumerable<SelectListItem>)TempData["thangs"], htmlAttributes: new { @class = "form-control-sm" ,}) 
+                    @Html.DropDownList("thangs", (IEnumerable<SelectListItem>)TempData["thangs"], htmlAttributes: new { @class = "form-control-sm", })
                     <input type="submit" class="btn btn-danger btn-sm" value="Tìm theo tháng">
-
-
                 }
             </div>
-            <div class="row" >
+            <div class="row">
                 <div class="col-sm-12  table-responsive">
                     <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
                         @*//Phần render từng dòng trong C#*@
                         <thead>
                             <tr role="row">
-                                <th class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Mã đơn hàng</th>
-                                <th class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Mã nhân viên lập</th>
-                                <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Ngày lập</th>
-                                <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Điểm giao hàng</th>
-                                <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Tổng tiền</th>
+                                <th class="sorting" tabindex="0" aria-controls="sampleTable">Mã DH</th>
+                                <th class="sorting" tabindex="0" aria-controls="sampleTable">Ngày lập</th>
+                                <th class="sorting" tabindex="0" aria-controls="sampleTable">Điểm giao hàng</th>
+                                <th  class="sorting" tabindex="0" aria-controls="sampleTable">Tổng tiền</th>
                             </tr>
                         </thead>
                         <tbody>
                             @{
                                 var total = Model.Count();
-                                //List<DonHang> donhang = db.DonHangs.Where(s => s.MaDL == Model.MaDL).ToList();
-
                             }
                             @foreach (var item in Model)
                             {
-                                if (item.TinhTrangThanhToan == "Chưa thanh toán" && item.TinhTrangGH=="Đã giao")
-                                {
 
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.MaDH)
-                                        </td>
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.MaDH)
+                                    </td>
+                                    <td>
+                                        @{
+                                            var ngay = String.Format("{0:d/M/yyyy}", item.NgayLap);
+                                        }
+                                        @Html.DisplayFor(modelItem => ngay)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.DiemGiao)
+                                    </td>
+                                    <td>
+                                        @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
+                                        @Html.DisplayFor(modelItem => ThanhTien)
 
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.MaNVLap)
-                                        </td>
-
-                                        <td>
-                                            @{
-                                                var ngay = String.Format("{0:d/M/yyyy}", item.NgayLap);
-                                            }
-                                            @Html.DisplayFor(modelItem => ngay)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.DiemGiao)
-                                        </td>
-                                        <td>
-
-
-                                            @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
-                                            @Html.DisplayFor(modelItem => ThanhTien)
-
-                                        </td>
-                                    </tr>
-
-
-
-
-                                }
+                                    </td>
+                                </tr>
 
                             }
                             <tr>
-                                <th colspan="4">Tổng cộng hóa đơn :</th>
-
+                                <th colspan="3">Tổng cộng hóa đơn :</th>
                                 <td>@Html.DisplayFor(modelItem => tongno)</td>
-
                             </tr>
                         </tbody>
 
                     </table>
-
-
                 </div>
             </div>
-
         </div>
     </div>
 </div>
@@ -141,7 +119,7 @@
             else
             {
                 <div class="col-sm-2">
-                    <a class="btn btn-warning btn-sm " data-toggle="modal" data-target="#myModal">
+                    <a class="btn btn-warning btn-sm "  id="btn-submit" onclick="CNCheck()" data-toggle="modal" data-target="#myModal">
                         Thêm phiếu công nợ
                     </a>
                 </div>
@@ -155,13 +133,8 @@
                 </div>
             }
         }
-
-
     </div>
 </div>
-
-
-
 <!-- The Modal -->
 <div class="modal" id="myModal">
     <div class="modal-dialog">
@@ -175,62 +148,59 @@
                 @Html.HiddenFor(model => phieucongno.MaDL)
                 @Html.HiddenFor(model => phieucongno.TienNo)
                 @Html.HiddenFor(model => phieucongno.TrangThai)
-                <input name="MaDL" id="MaDL" value="@daily.MaDL"style="visibility:hidden" />
+                <input name="MaDL" id="MaDL" value="@daily.MaDL" style="visibility:hidden" />
                 <!-- Modal body -->
-                <div class="modal-body">
-                    <p class="modal-name">THÊM PHIẾU CÔNG NỢ </p>
-                    <div class="confirmation-dh">
-                        <p>
-                            Lập phiếu công nợ tháng @Session["thangs"]
-                        </p>
+                <div class="modal-body element-button"  style="font-size:16px"> 
+                        <h4 style="text-align:center" class="element-button">
+                            LẬP PHIẾU CÔNG NỢ
+                        </h4>
                         <div class="form-group col-sm-12">
-                            <strong>Thông tin đại lý</strong>@daily.TenDL - @daily.MaDL
-
+                            <strong>Thông tin đại lý</strong>
+                            <br />
+                            @daily.TenDL - @daily.MaDL
+                            <br />
+                            @daily.DiaChi
+                            <br />
+                            @daily.SDT -@daily.Email
                         </div>
                         @{
                             DateTime time = DateTime.Now;
                             DateTime maxtime = time.AddDays(30);
+
                         }
-                        <div class="form-group col-sm-10">
-                            <strong>Ngày lập công nợ</strong>
-                            <div class="col-md-10">
-
-                                <input class="form-control col-md-12 text-box single-line datepicker" name="NgayLapCN" id="NgayLapCN" data-val="true" type="date" value="@time.ToString("yyyy-MM-dd")" required>
+                        <div>
+                            <div class="form-group col-sm-10">
+                                <strong>Ngày lập công nợ</strong>
+                                <div class="col-md-10">
+                                    <input class="form-control col-md-12 text-box single-line datepicker" name="NgayLapCN" id="NgayLapCN" data-val="true" type="date" value="@time.ToString("yyyy-MM-dd")" required>
+                                </div>
+                            </div>
+                            <div class="form-group col-sm-10">
+                                <strong>Hạn trả </strong>
+                                <div class="col-md-10">
+                                    <input class="form-control col-md-12 text-box single-line datepicker" name="Hantra" id="Hantra" data-val="true" type="date" min="@DateTime.Now.ToString("yyyy-MM-dd")" max="@maxtime.ToString("yyyy-MM-dd")" required>
+                                </div>
                             </div>
                         </div>
-                        <div class="form-group col-sm-10">
-                            <strong>Hạn trả: </strong>
-                            <div class="col-md-10">
-                                <input class="form-control col-md-12 text-box single-line datepicker" name="Hantra" id="Hantra" data-val="true" type="date" min="@DateTime.Now.ToString("yyyy-MM-dd")" max="@maxtime.ToString("yyyy-MM-dd")" required>
-
-                            </div>
+                        <div class="col-sm-12">
+                           <b>TỔNG CÔNG NỢ : </b> @tongno
                         </div>
-                        <p>
-                            <span>Tổng công nợ:</span> @tongno
-                        </p>
-                    </div>
-
                 </div>
-
-
                 <!-- Modal footer -->
                 <div class="modal-footer">
                     <a class="btn btn-danger" data-dismiss="modal">Close</a>
-                    @*<a class="btn btn-success" href="/KeToan/TaoCongno/@daily.MaDL">Xuất công nợ</a>*@
-                    <input type="submit" value="Lập phiếu công nợ" class="btn btn-success" />
+                    <input type="submit"  value="Lập phiếu công nợ" class="btn btn-success" />
                 </div>
             }
         </div>
     </div>
 </div>
-
+<input value="@Session["KtraDH"]" id="kiemtradh" style="visibility:hidden"/>
 
 <script>
     //In dữ liệu
-
-
     function printDiv(divName) {
-        
+
         document.getElementById("dropdownsort").style.display = "none";
         var printContents = document.getElementById(divName).innerHTML;
         var originalContents = document.body.innerHTML;
@@ -240,9 +210,14 @@
         window.print();
 
         document.body.innerHTML = originalContents;
-
+    }
+    function CNCheck() {
+        var c = document.getElementById("kiemtradh").value;
+        if (c > 0) {
+            alert("Vui lòng tách phiếu công nợ !!");
+            document.getElementById('btn-submit').disabled = true;
+        }
 
     }
-
 
 </script>
