--- a/Test02/Views/KeToan/XuatHDBH.cshtml
+++ b/Test02/Views/KeToan/XuatHDBH.cshtml
@@ -220,7 +220,8 @@
                 <div class="modal-footer" style="padding-top:10px;">
                     <a class="btn btn-danger" data-dismiss="modal">Close</a>
                     @*<a class="btn btn-success" href="/KeToan/TaoCongno/@daily.MaDL">Xuất công nợ</a>*@
-                    <input type="submit" value="Lập phiếu công nợ" class="btn btn-success" />
+                    <input type="submit" value="Cập nhật
+                           " class="btn btn-success" />
                 </div>
             }
         </div>
