--- a/Test02/Views/KeToan/CongnoDL.cshtml
+++ b/Test02/Views/KeToan/CongnoDL.cshtml
@@ -16,6 +16,7 @@
     var loaidl = db.LoaiDLs.Where(s => s.MaLoaiDL == madly).FirstOrDefault();
     var daily = db.DaiLies.Where(s => s.MaDL == madly).FirstOrDefault();
     var tongno = "";
+    int thangdh = (int)Session["thangtrongdonhang"];
     if (ViewBag.TongCN != null)
     {
         tongno = string.Format("{0:0,0 vnđ}", ViewBag.TongCN);
@@ -28,113 +29,136 @@
 <div class="col-md-12">
     <div class="tile" id="printme">
         @*<h4 class="title-ketoan">THÔNG TIN ĐẠI LÝ</h4>*@
-        <div class="tile-body">
-            <div class="detail-daily">
-                <h5><b>THÔNG TIN ĐẠI LÝ</b></h5>
-                <p>
-                    <strong>Mã đại lý: </strong>@Html.DisplayFor(modelItem => Session["Madly"])- @Html.DisplayFor(modelItem => daily.MaLoaiDL)
-                </p>
-                <p>
-                    <strong>Tên đại lý: </strong>@Html.DisplayFor(modelItem => daily.TenDL)
-                </p>
-                <p>
+        <div class="tile-body row">
+            <div class="col-sm-4">
+                <div class="detail-daily">
+                    <h5><b>THÔNG TIN ĐẠI LÝ</b></h5>
+                    <p>
+                        <strong>Mã đại lý: </strong>@Html.DisplayFor(modelItem => Session["Madly"])- @Html.DisplayFor(modelItem => daily.MaLoaiDL)
+                    </p>
+                    <p>
+                        <strong>Tên đại lý: </strong>@Html.DisplayFor(modelItem => daily.TenDL)
+                    </p>
+                    <p>
                         <strong>Địa chỉ: </strong>@Html.DisplayFor(modelItem => daily.DiaChi)
-                </p>
-                <p>
+                    </p>
+                    <p>
                         <strong>Liên lac: </strong>@Html.DisplayFor(modelItem => daily.SDT) - @Html.DisplayFor(modelItem => daily.Email)
-                </p>
-             </div>
-        </div>
-        <div class="thongtindonhang">
-            <h5><b>THÔNG TIN ĐƠN HÀNG</b></h5>
-            <div class="col-sm-6" id="dropdownsort">
-                @using (Html.BeginForm("CongnoDL", "KeToan", FormMethod.Post, new { @class = "form-group-sm" }))
-                {
-                    @Html.DropDownList("thangs", (IEnumerable<SelectListItem>)TempData["thangs"], htmlAttributes: new { @class = "form-control-sm", })
-                    <input type="submit" class="btn btn-danger btn-sm" value="Tìm theo tháng">
-                }
+                    </p>
+                </div>
             </div>
-            <div class="row">
-                <div class="col-sm-12  table-responsive">
-                    <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
-                        @*//Phần render từng dòng trong C#*@
-                        <thead>
-                            <tr role="row">
-                                <th class="sorting" tabindex="0" aria-controls="sampleTable">Mã DH</th>
-                                <th class="sorting" tabindex="0" aria-controls="sampleTable">Ngày lập</th>
-                                <th class="sorting" tabindex="0" aria-controls="sampleTable">Điểm giao hàng</th>
-                                <th  class="sorting" tabindex="0" aria-controls="sampleTable">Tổng tiền</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @{
-                                var total = Model.Count();
-                            }
-                            @foreach (var item in Model)
+            <div class="col-sm-8">
+                <div class="thongtindonhang">
+                    <h5><b>THÔNG TIN ĐƠN HÀNG</b></h5>
+                    <div class="col-sm-6" id="dropdownsort">
+                        @using (Html.BeginForm("CongnoDL", "KeToan", FormMethod.Post, new { @class = "form-group-sm" }))
+                        {
+                            @Html.DropDownList("thangs", (IEnumerable<SelectListItem>)TempData["thangs"], htmlAttributes: new { @class = "form-control-sm", })
+                            <input type="submit" class="btn btn-danger btn-sm" value="Tìm theo tháng">
+                        }
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12  table-responsive">
+                            <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
+                                @*//Phần render từng dòng trong C#*@
+                                <thead>
+                                    <tr role="row">
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable">Mã DH</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable">Ngày lập</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable">Điểm giao hàng</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable">Tổng tiền</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @{
+
+                                        List<DonHang> dh = Model.ToList();
+                                        var total = Model.Count();
+                                        int dem = 0;
+                                    }
+                                    @for (int item = 0; item < dh.Count; item++)
+                                    {
+
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => dh[item].MaDH)
+                                            </td>
+                                            <td>
+                                                @{
+                                                    var ngay = String.Format("{0:d/M/yyyy}", dh[item].NgayLap);
+                                                    //DateTime lap1 = (DateTime)dh[item].NgayLap;
+
+                                                    //DateTime lap2 = (DateTime)dh[item + 1].NgayLap;
+
+                                                    //if (lap1.Month != lap2.Month)
+                                                    //{
+                                                    //    dem++;
+                                                    //}
+                                                }
+                                                @Html.DisplayFor(modelItem => ngay)
+
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => dh[item].DiemGiao)
+                                            </td>
+                                            <td>
+                                                @{ var ThanhTien = string.Format("{0:0,0 vnđ}", dh[item].TongTien);}
+                                                @Html.DisplayFor(modelItem => ThanhTien)
+
+                                            </td>
+
+
+                                        </tr>
+
+
+
+                                    }
+                                    <tr>
+                                        <th colspan="3">Tổng cộng hóa đơn :</th>
+                                        <td>@Html.DisplayFor(modelItem => tongno)</td>
+                                    </tr>
+                                </tbody>
+
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="btn-func">
+                    <div class="row">
+                        @{
+                            if (total == 0)
                             {
-
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.MaDH)
-                                    </td>
-                                    <td>
-                                        @{
-                                            var ngay = String.Format("{0:d/M/yyyy}", item.NgayLap);
-                                        }
-                                        @Html.DisplayFor(modelItem => ngay)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.DiemGiao)
-                                    </td>
-                                    <td>
-                                        @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
-                                        @Html.DisplayFor(modelItem => ThanhTien)
-
-                                    </td>
-                                </tr>
+                                <div class="col-sm-2">
+                                    <a class="btn btn-warning btn-sm " type="button" title="Quay lại" href="~/KeToan/DSDaiLy"> Quay lại</a>
+                                </div>
 
                             }
-                            <tr>
-                                <th colspan="3">Tổng cộng hóa đơn :</th>
-                                <td>@Html.DisplayFor(modelItem => tongno)</td>
-                            </tr>
-                        </tbody>
-
-                    </table>
+                            else
+                            {
+                                <div class="col-sm-2">
+                                    <a class="btn btn-warning btn-sm " id="btn-submit" onclick="CNCheck()" data-toggle="modal" data-target="#myModal">
+                                        Thêm phiếu công nợ
+                                    </a>
+                                </div>
+                                <div class="col-sm-2">
+                                    <a class="btn btn-success btn-sm" type="button" title="In" onclick="printDiv('printme')">
+                                        <i class="fas fa-print"></i> In dữ liệu
+                                    </a>
+                                </div>
+                                <div class="col-sm-2">
+                                    <a class="btn btn-delete btn-sm print-file" type="button" title="Quay lại" href="~/KeToan/DSDaiLy">Quay lại danh sách</a>
+                                </div>
+                            }
+                        }
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-<div class="btn-func">
-    <div class="row">
-        @{
-            if (total == 0)
-            {
-                <div class="col-sm-2">
-                    <a class="btn btn-warning btn-sm " type="button" title="Quay lại" href="~/KeToan/DSDaiLy"> Quay lại</a>
-                </div>
 
-            }
-            else
-            {
-                <div class="col-sm-2">
-                    <a class="btn btn-warning btn-sm "  id="btn-submit" onclick="CNCheck()" data-toggle="modal" data-target="#myModal">
-                        Thêm phiếu công nợ
-                    </a>
-                </div>
-                <div class="col-sm-2">
-                    <a class="btn btn-success btn-sm" type="button" title="In" onclick="printDiv('printme')">
-                        <i class="fas fa-print"></i> In dữ liệu
-                    </a>
-                </div>
-                <div class="col-sm-2">
-                    <a class="btn btn-delete btn-sm print-file" type="button" title="Quay lại" href="~/KeToan/DSDaiLy">Quay lại danh sách</a>
-                </div>
-            }
-        }
+        </div>
+
     </div>
 </div>
+
 <!-- The Modal -->
 <div class="modal" id="myModal">
     <div class="modal-dialog">
@@ -150,53 +174,56 @@
                 @Html.HiddenFor(model => phieucongno.TrangThai)
                 <input name="MaDL" id="MaDL" value="@daily.MaDL" style="visibility:hidden" />
                 <!-- Modal body -->
-                <div class="modal-body element-button"  style="font-size:16px"> 
-                        <h4 style="text-align:center" class="element-button">
-                            LẬP PHIẾU CÔNG NỢ
-                        </h4>
-                        <div class="form-group col-sm-12">
-                            <strong>Thông tin đại lý</strong>
-                            <br />
-                            @daily.TenDL - @daily.MaDL
-                            <br />
-                            @daily.DiaChi
-                            <br />
-                            @daily.SDT -@daily.Email
+                <div class="modal-body element-button" style="font-size:16px">
+                    <h4 style="text-align:center" class="element-button">
+                        LẬP PHIẾU CÔNG NỢ
+                    </h4>
+                    <div class="form-group col-sm-12">
+                        <strong>Thông tin đại lý</strong>
+                        <br />
+                        @daily.TenDL - @daily.MaDL
+                        <br />
+                        @daily.DiaChi
+                        <br />
+                        @daily.SDT -@daily.Email
+                        <br />
+                        <b>Công nợ tháng:</b>@thangdh
+                        <input value="@thangdh" id="thangtrongdh" name="thangtrongdh" style="visibility:hidden"/>
+                    </div>
+                 
+                <div>
+                    <div class="form-group col-sm-10">
+                        <strong>Ngày lập công nợ</strong>
+                        <div class="col-md-10">
+                            <input class="form-control col-md-12 text-box single-line datepicker" name="NgayLapCN" id="NgayLapCN" data-val="true" type="date"  onchange="KtraNgayLapCN()" required>
+                            <p id="checkngay"></p>
                         </div>
-                        @{
-                            DateTime time = DateTime.Now;
-                            DateTime maxtime = time.AddDays(30);
-
-                        }
-                        <div>
-                            <div class="form-group col-sm-10">
-                                <strong>Ngày lập công nợ</strong>
-                                <div class="col-md-10">
-                                    <input class="form-control col-md-12 text-box single-line datepicker" name="NgayLapCN" id="NgayLapCN" data-val="true" type="date" value="@time.ToString("yyyy-MM-dd")" required>
-                                </div>
-                            </div>
-                            <div class="form-group col-sm-10">
-                                <strong>Hạn trả </strong>
-                                <div class="col-md-10">
-                                    <input class="form-control col-md-12 text-box single-line datepicker" name="Hantra" id="Hantra" data-val="true" type="date" min="@DateTime.Now.ToString("yyyy-MM-dd")" max="@maxtime.ToString("yyyy-MM-dd")" required>
-                                </div>
-                            </div>
+                    </div>
+                   
+                    <div class="form-group col-sm-10">
+                        <strong>Hạn trả </strong>
+                        <div class="col-md-10">
+                            <input class="form-control col-md-12 text-box single-line datepicker" onchange="KiemtraHanTra()"  name="Hantra" id="Hantra" data-val="true" type="date" required>
+                            <p id="hantra"></p>
                         </div>
-                        <div class="col-sm-12">
-                           <b>TỔNG CÔNG NỢ : </b> @tongno
-                        </div>
+                    </div>
+                </div>
+                    <div class="col-sm-12">
+                        <b>TỔNG CÔNG NỢ : </b> @tongno
+                    </div>
                 </div>
                 <!-- Modal footer -->
                 <div class="modal-footer">
                     <a class="btn btn-danger" data-dismiss="modal">Close</a>
-                    <input type="submit"  value="Lập phiếu công nợ" class="btn btn-success" />
+                    <input type="submit" id="btn-submit" value="Lập phiếu công nợ" class="btn btn-success" />
                 </div>
             }
         </div>
     </div>
 </div>
-<input value="@Session["KtraDH"]" id="kiemtradh" style="visibility:hidden"/>
-
+<input value="@Session["KtraDH"]" id="kiemtradh" style="visibility:hidden" />
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="Scripts/jquery-1.4.1.js" type="text/javascript"></script>
 <script>
     //In dữ liệu
     function printDiv(divName) {
@@ -220,4 +247,50 @@
 
     }
 
+    function KtraNgayLapCN() {
+        $("#checkngay").html("check ...");
+        $.post("@Url.Action("KtraNgayLapCN", "KeToan")",
+            {
+                ngaylap: $("#NgayLapCN").val(),
+                thanglap: $("#thangtrongdh").val()
+            },
+            function (data) {
+                if (data == 0) {
+                    $("#checkngay").html('<font color="Green">Hợp lệ!</font>');
+                    $("#NgayLapCN").css("border-color", "Green");
+                    document.getElementById('btn-submit').disabled = false;
+                }
+                else {
+                    $("#checkngay").html('<font color="Red">Chọn đúng tháng lập!!</font>');
+                    $("#NgayLapCN").css("border-color", "Red");
+                    document.getElementById('btn-submit').disabled = true;
+                }
+            }
+        )
+    }
+    function KiemtraHanTra() {
+        var min = document.getElementById("NgayLapCN").value;
+        var input = document.getElementById("Hantra");
+        input.min = min;
+        $("#hantra").html("check ...");
+        $.post("@Url.Action("KtraHanCN", "KeToan")",
+            {
+                ngaylap: $("#NgayLapCN").val(),
+                hantra: $("#Hantra").val()
+            },
+            function (data) {
+                if (data == 0) {
+                    $("#hantra").html('<font color="Green">Hợp lệ!</font>');
+                    $("#Hantra").css("border-color", "Green");
+                    document.getElementById('btn-submit').disabled = false;
+                }
+                else {
+                    $("#hantra").html('<font color="Red">Không đúng theo quy định 30 ngày!!</font>');
+                    $("#Hantra").css("border-color", "Red");
+                    document.getElementById('btn-submit').disabled = true;
+                }
+            }
+        )
+    }
+   
 </script>
