--- a/Test02/Views/KeToan/XuatHDBH.cshtml
+++ b/Test02/Views/KeToan/XuatHDBH.cshtml
@@ -143,8 +143,8 @@
             </a>
         </div>
         <div class="col-sm-2">
-
-            @if (Model.TinhTrangGH == null)
+            <a class="btn btn-danger btn-sm" type="button" title="Quay lại " href="~/KeToan/QLDonHang">Quay lại</a>
+            @*@if (Model.TinhTrangGH == null)
             {
                 <a class="btn btn-danger btn-sm" type="button" title="Quay lại " href="~/KeToan/QLDonHang">Quay lại</a>
             }
@@ -155,7 +155,7 @@
             else if (Model.TinhTrangGH == "Chờ giao")
             {
                 <a class="btn btn-danger btn-sm" type="button" title="Quay lại " href="~/KeToan/QLDonChoGiao">Quay lại</a>
-            }
+            }*@
 
         </div>
 
