--- a/Test02/Views/KinhDoanh/ThemDL.cshtml
+++ b/Test02/Views/KinhDoanh/ThemDL.cshtml
@@ -172,9 +172,11 @@
                         success: function (res) {
                             if (res.success == true) {
                                 $("#Error").html('Tên đại lý hợp lệ !');
+                                $('#Error').attr('style', 'color:green');
                             }
                             else {
                                 $("#Error").html('Tên đại lý không hợp lệ hoặc đã được sử dụng !');
+                                $('#Error').attr('style', 'color:red');
                             }
                         }
                     });
@@ -199,9 +201,11 @@
                         success: function (res) {
                             if (res.success == true) {
                                 $("#Error01").html('Số điện thoại này hợp lệ !');
+                                $('#Error01').attr('style','color:green')
                             }
                             else {
                                 $("#Error01").html('Số điện thoại không hợp lệ hoặc đã được sử dụng !');
+                                $('#Error01').attr('style', 'color:red')
                             }
                         }
                     });
@@ -249,6 +253,7 @@
                 }
                 else {
                     $("#Error02").html('Vui lòng nhập đúng định dạng Email !');
+                    $('#Error02').attr('style', 'color:red');
                 };
             });
         });
