--- a/Test02/Views/KhachHang/ThongTinDL.cshtml
+++ b/Test02/Views/KhachHang/ThongTinDL.cshtml
@@ -76,61 +76,59 @@
                             }
                             else
                             {
-                                //<img id="preview" class="img-avatar" style="visibility: visible;" src="@Model.HinhAnh" />
-                                <img class="img-avatar" src="@Model.HinhAnh" />
+                                <img id="preview" class="img-avatar" src="@Model.HinhAnh" />
+                                //<img class="img-avatar" src="@Model.HinhAnh" />
                             }
                         </div>
                         <div style="margin-top: 20px;">
                             @*@Html.TextBox("HinhAnh", "", new { type = "file", @class = "form-control text-center text-danger" })*@
-                            <input type="file" name="HinhAnh" style="width: 80px;" />
+                            <input id="input" type="file" name="HinhAnh" style="width: 80px;" />
                         </div>
                     </div>
 
                     <div class="col-lg-7 col-md-12 col-sm-12">
-                        <div class="element-button">
-                            <div class="row">
-                                <div class="form-group col-sm-7">
-                                    <label class="control-label">Tên đại lý</label>
-                                    @Html.EditorFor(model => model.TenDL, new { htmlAttributes = new { @class = "form-control col-sm-12", @required = "required" } })
-                                    @Html.ValidationMessageFor(model => model.TenDL, "", new { @class = "text-danger" })
-                                </div>
-
-                                <div class="form-group col-md-5">
-                                    <label class="control-label">Ngày đăng kí</label>
-                                    @Html.TextBoxFor(model => model.NgayTao, "{0:dd/MM/yyyy}", new { @class = "form-control col-md-12", type = "datetime", @readonly = "readonly" })
-                                    @Html.ValidationMessageFor(model => model.NgayTao, "", new { @class = "text-danger" })
-                                </div>
+                        <div class="row">
+                            <div class="form-group col-sm-7">
+                                <label class="control-label">Tên đại lý</label>
+                                @Html.EditorFor(model => model.TenDL, new { htmlAttributes = new { @class = "form-control col-sm-12", @required = "required" } })
+                                @Html.ValidationMessageFor(model => model.TenDL, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="row">
-                                <div class="form-group col-md-7">
-                                    <label class="control-label">Email</label>
-                                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control col-sm-12", @id = "Email", onchange = "EmailCheck()", @required = "required" } })
-                                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-                                    <span id="mess"></span>
-                                </div>
+                            <div class="form-group col-md-5">
+                                <label class="control-label">Ngày đăng kí</label>
+                                @Html.TextBoxFor(model => model.NgayTao, "{0:dd/MM/yyyy}", new { @class = "form-control col-md-12", type = "datetime", @readonly = "readonly" })
+                                @Html.ValidationMessageFor(model => model.NgayTao, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
 
-                                <div class="form-group col-sm-5">
-                                    <label class="control-label">Số điện thoại</label>
-                                    @Html.EditorFor(model => model.SDT, new { htmlAttributes = new { @class = "form-control col-sm-12", @id = "NoPhone", onchange = "NoPhoneCheck()", @required = "required" } })
-                                    @Html.ValidationMessageFor(model => model.SDT, "", new { @class = "text-danger" })
-                                    <span id="noti"></span>
-                                </div>
+                        <div class="row">
+                            <div class="form-group col-md-7">
+                                <label class="control-label">Email</label>
+                                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control col-sm-12", @id = "Email", onchange = "EmailCheck()", @required = "required" } })
+                                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                                <span id="mess"></span>
                             </div>
 
-                            <div class="row">
-                                <div class="form-group col-md-12">
-                                    <label class="control-label">Địa chỉ</label>
-                                    @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control col-sm-12", @required = "required" } })
-                                    @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
-                                </div>
+                            <div class="form-group col-sm-5">
+                                <label class="control-label">Số điện thoại</label>
+                                @Html.EditorFor(model => model.SDT, new { htmlAttributes = new { @class = "form-control col-sm-12", @id = "NoPhone", onchange = "NoPhoneCheck()", @required = "required" } })
+                                @Html.ValidationMessageFor(model => model.SDT, "", new { @class = "text-danger" })
+                                <span id="noti"></span>
                             </div>
-                            <div class="row">
-                                <div class="pull-right" style="margin-top: 20px; width: auto; margin-left: 20px;">
-                                    <a href="/KhachHang/PageSanPham" class="btn btn-outline-danger">Quay lại</a>
-                                    <input type="submit" value="Cập nhật thông tin" class="btn btn-outline-primary" />
-                                    <a class="btn btn-outline-success" href="/KhachHang/CapNhatMatKhau/@Model.MaDL">Đổi mật khẩu</a>
-                                </div>
+                        </div>
+
+                        <div class="row element-button">
+                            <div class="form-group col-md-12">
+                                <label class="control-label">Địa chỉ</label>
+                                @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control col-sm-12", @required = "required" } })
+                                @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="pull-right" style="margin-top: 20px; width: auto; margin-left: 20px;">
+                                <a href="/KhachHang/PageSanPham" class="btn btn-outline-danger">Quay lại</a>
+                                <input type="submit" value="Cập nhật thông tin" class="btn btn-outline-primary" />
+                                <a class="btn btn-outline-success" href="/KhachHang/CapNhatMatKhau/@Model.MaDL">Đổi mật khẩu</a>
                             </div>
                         </div>
                     </div>
@@ -143,6 +141,13 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="Scripts/jquery-1.4.1.js" type="text/javascript"></script>
 <script type="text/javascript">
+    let img = document.getElementById('preview');
+    let input = document.getElementById('input');
+
+    input.onchange = (e) => {
+        if (input.files[0])
+            img.src = URL.createObjectURL(input.files[0]);
+    };
     //HinhAnh.onchange = evt => {
     //    const [file] = HinhAnh.files
     //    if (file) {
